<resources>
    <string name="app_name">Grand-Hotel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_booking">My Booking</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="personal_info">Personal Info</string>
    <string name="notifications">Notifications</string>
    <string name="first_term">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus. Odio vulputate est id tincidunt fames.</string>
    <string name="second_term">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus. Odio vulputate est id tincidunt fames.</string>
    <string name="third_term">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus. Odio vulputate est id tincidunt fames.</string>
    <string name="fourth_term">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus. Odio vulputate est id tincidunt fames.</string>
    <string name="security">Security</string>
    <string name="languages">Languages</string>
    <string name="lorem_ipsum_short_title">Lorem ipsum dolor sit amet</string>
    <string name="lorem_ipsum_long">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</string>
    <string name="question_1">Lorem ipsum dolor sit amet?</string>
    <string name="answer_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor.</string>
    <string name="question_2">Consectetur adipiscing elit?</string>
    <string name="answer_2">Consectetur adipiscing elit. Sapien, consequat ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus.</string>
    <string name="question_3">Eget ornare quam vel?</string>
    <string name="answer_3">Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Odio vulputate est id tincidunt fames.</string>
    <string name="question_4">Sapien consequat ultrices?</string>
    <string name="answer_4">Sapien, consequat ultrices morbi orci semper sit nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="question_5">Leo auctor ut etiam est?</string>
    <string name="answer_5">Leo auctor ut etiam est, amet aliquet ut vivamus. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor.</string>
    <string name="new_message">Add New Message</string>
    <string name="back">Back</string>
    <string name="chat">Chat</string>
    <string name="options">Options</string>
    <string name="user_profile_image">User profile image</string>
    <string name="video_call">Video call</string>
    <string name="call">Call</string>
    <string name="hotel_image">Hotel image</string>
    <string name="location">Location</string>
    <string name="rating">Rating</string>
    <string name="attach_file">Attach file</string>
    <string name="write_a_reply">Write a reply</string>
    <string name="send_message">Send message</string>
    <string name="most_popular">Most Popular</string>
    <string name="see_all">See All</string>
    <string name="you_can_change_location">You Can Change Your Location to show nearby villas</string>
    <string name="hotel_near_you">Hotel Near You</string>
    <string name="open_map">Open Map</string>
    <string name="booking_now">Booking Now</string>
    <string name="_7_777_777_7777">+7 (777) 777-7777 </string>
    <string name="error">ERROR</string>

</resources>