<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="24dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/legalPoliciesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost_semibold"
            android:text="Legal and Policies"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@+id/backButton"
            app:layout_constraintBottom_toBottomOf="@+id/backButton"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center" />

        <TextView
            android:id="@+id/termsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/jost_medium"
            android:text="Terms"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legalPoliciesTextView" />

        <TextView
            android:id="@+id/termsContentTextView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/jost_regular"
            android:text="@string/first_term"
            android:textColor="#757575"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/termsTextView" />

        <TextView
            android:id="@+id/termsContentTextView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/jost_regular"
            android:text="@string/second_term"
            android:textColor="#757575"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/termsContentTextView1" />

        <TextView
            android:id="@+id/changesTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/jost_medium"
            android:text="Changes to the Service and/or Terms:"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/termsContentTextView2" />

        <TextView
            android:id="@+id/changesContentTextView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/jost_regular"
            android:text="@string/first_term"
            android:textColor="#757575"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changesTextView" />

        <TextView
            android:id="@+id/changesContentTextView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/jost_regular"
            android:text="@string/fourth_term"
            android:textColor="#757575"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changesContentTextView1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>